# tech-trend-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  tests.yml
agents/: analyst.py  mock_data.py  orchestrator.py  researcher.py
tests/: test_agents.py  test_chart_generator.py  test_cli.py  test_comparison.py  test_mock_data.py  test_models.py  test_pdf_report_generator.py  test_report_generator.py
utils/: chart_generator.py  comparison_report.py  pdf_report_generator.py  report_generator.py
