[project]
name = "tech-trend-agent"
version = "1.1.0"
description = "Multi-agent system that generates comprehensive technology trend reports"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.112.0",
    "matplotlib>=3.10.9",
    "python-docx>=1.2.0",
    "fpdf2>=2.7.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: line length is handled by the formatter
# B008: FastAPI's Depends()/File() default-argument idiom is intentional
ignore = ["E501", "B008"]
